# LGAR-C

./: CMakeLists.txt  INSTALL.md  README.md
configs/: README.md
data/: README.md
include/: all.hxx  bmi_lgar.hxx
src/: bmi_lgar.cxx  conceptual_reservoir.cxx  lgar.cxx
tests/: main_unit_test_bmi.cxx
